--- a/src/style.css
+++ b/src/style.css
@@ -222,15 +222,16 @@ section{
 
 .estadistic{
     margin-top: 10px;
-    height: 60px;
-    width: 60px;
-    margin-right: 50px;
+    height: 50px;
+    width: 50px;
+    margin-right: 35px;
     border-radius: 50%;
     background-color: black;
     color: #fff;
     font-weight:600;
     text-align-last: center;
     border-style: solid;
+    border-color: black;
 }
 
 .modal {
@@ -438,8 +439,8 @@ section{
     
     .home{
         display: flex;
-        margin-top: 15px;
-        margin-left: 30px;
+        margin-top: 10px;
+        margin-left: 0px;
         height: 5%;
     }
     
@@ -447,6 +448,19 @@ section{
         display: flex;
         width: 30px;
         height: 30px;
+    }
+
+    .estadistic{
+        display: flex;
+        height: 32px;
+        width: 32px;
+        margin-top: 20px;
+        margin-right: 30px;
+        font-weight:700;
+        font-size: 8.5px;
+        text-align: left;
+        border-style: solid;
+        border-color: black;
     }
     
     .card-info{
