--- a/src/style.css
+++ b/src/style.css
@@ -184,4 +184,19 @@ option {
     
 }
 
+
+#btnTop{
+    background-color: rgb(231, 231, 217);
+    width: 200px; 
+    height: 35px;
+    text-align: center;
+    padding: 5px;
+    border-radius: 20px;
+    margin: 10px;
+    border: 2px solid white;
+    box-shadow: 0px 0px 10px 1px rgb(167, 165, 141);
+    font-family: 'roboto';
+    opacity: 0.8;
+    color: rgb(43, 43, 43);
+}
  
