--- a/src/style.css
+++ b/src/style.css
@@ -6,7 +6,6 @@
 }
 
 body{
-    background-color: #fff;
     position: absolute;
     width: 100%;
     display: flex;
@@ -20,23 +19,22 @@ body{
     display: flex;
     height: 100px;
     width: 100%;
+    max-width: 100%;
     flex-flow: row wrap;
     justify-content: space-between;
 }
 
 .container-title nav {
-    width: 60%;
+    width: 70%;
     height: 100%;
 }
 .container-title nav ul{
     height: 100%;
+    width: 100%;
     list-style: none;
     display: flex;
     flex-flow: row wrap;
     justify-content: right;
-}
-.br{
-    display: none;
 }
 
 .container-title nav li{
@@ -54,7 +52,7 @@ body{
 
 .container-logo {
     height: 100%;
-    width: 30%;
+    width: 20%;
 }
 
 .container-title img {
@@ -62,35 +60,7 @@ body{
     width: 100%;
     object-fit: contain;
 }
-/*  fala responsive cel table nav 
-@media only screen and (max-width: 850px){
-    .container-title{ 
-        background-color:#8338ec;
-        display: flex;
-        height: 80px;
-    }
-    .container-title nav{
 
-    }
-    .container-title nav ul{
-
-    }
-    .br{
-    }
-    .container-title nav li{
-        font-size:;
-        display: none;
-    }
-    .nav-list li:hover{
-    }
-    
-    .container-logo{
-
-    }
-    .container-title img{
-
-    }
-}*/
 
 /*Browser windows functionality js*/
 .index[data-content] {
@@ -100,16 +70,116 @@ body{
     display: none;
 }
 
+.filters{
+    width: 100%;
+}
+/*filter design*/
+
+.container-filter-box{
+    margin: 15px 8%;
+}
+
+.filterr{
+    display: flex;
+    background-color: hsla(278, 30%, 50%, 0.71);
+    padding: 20px;
+    border-radius: 10px;
+    width: 100%;
+    height: 100%;
+    flex-flow: row ;
+    justify-content: space-between;
+}
+
+.filter__01{
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-between;
+    align-items: center;
+}
+.filter__01 select{
+    width: 150px;
+    margin: 0px 10px 0px 0px;
+    background-color:#fffafa;
+    border:5px solid #1e3780 ;
+    border-radius: 13px;
+    display: flex;
+    position: relative;
+    font-size: 18px;
+    height: 50px;
+    font-weight: bolder;
+}
+.filter__01 select option{
+    min-height: 40px;
+    display: flex;
+    align-items: center;
+    border:1px solid #a6a5a57a ;
+    border-top: #000 solid 1px;
+    position: absolute;
+    top: 0;
+    width: 100%;
+    text-align: center;
+    z-index: 1;
+    box-sizing: border-box;
+}
+.filter__01 select:focus option{
+    position: relative;
+    position: all;
+}
+.filter__01 .filter-label-1{
+    width: 150px;
+    margin: 0px 10px ;
+    background-color:#dcdde1;
+    border:5px solid #dcdde1 ;
+    border-radius: 13px;
+    display: flex;
+    position: relative;
+    font-size: 18px;
+    height: 50px;
+    font-weight: bolder;
+}
+.filter__02{
+    background-color: red;
+    text-align: center;
+    width: 150px;
+    margin: 0px 0px;
+    background-color:#fff;
+    border:5px solid #1e3780 ;
+    border-radius: 13px;
+    display: flex;
+    flex-direction: row;
+    position: relative;
+    height: 50px;
+    font-size: 18px;
+font-weight: bold;
+}
+.filter__01 select option{
+    min-height: 40px;
+    display: flex;
+    align-items: center;
+    border:1px solid #8a59a6 ;
+    border-top: none;
+    position: absolute;
+    top: 0;
+    width: 100%;
+    pointer-events: none;
+    order:2;
+    z-index: 1;
+    transition: background 0.5s ease-in-out;
+    box-sizing: border-box;
+    overflow: hidden;
+    white-space: nowrap;
+}
+
+
+
 /*box data of the pokemon*/
 .box-pokedex{
-    margin: 0px 180px  ;
+    margin: 15px 8%;    
     background-color: #fff;
     display: flex;
     flex-flow: row wrap;
     justify-content: space-evenly;
-    align-content:space-between;
-    min-height: calc(100vh - 430px);
-    margin: 15px 78px;
+    min-height: calc(100vh - 1000px);
     border:5px solid #1e3780;
     border-radius: 13px;
 }
@@ -117,8 +187,8 @@ body{
     text-align: center;
     border: 2px solid grey;
     box-shadow:2px 2px 4px black ;
-    height: 240px;
-    width: 180px;
+    height: 14em;
+    width: 12em;
     margin: 10px 5px;
     background-color: #fff;;
     padding:10px;
@@ -162,177 +232,7 @@ body{
     border-radius: 10px;
 }
 
-/*Seccion de los filtrados
-.seeker {
-    padding: 10px;
-    display: flex;
-    margin: 20px 0px;
-    flex-flow: row wrap;
-    justify-content: space-around;
-}
 
-.seeker h1 {
-    width: 20%;
-    color: #fcc805;
-    text-shadow: 2px 3px 0px #1e5d9f;
-}
-
-.seeker div {
-    display: flex;
-    flex-flow: row;
-}*/
-/* 
-.seeker input {
-    width: 20%;
-    font-size: 1.5em;
-    background-color: white;
-    border: none;
-    box-shadow: 2px 1px 4px grey;
-    color: #e6504d;
-    outline: none;
-    text-align: center;
-    padding-left: 30px;
-    padding-right: 30px;
-    border-radius: 5px;
-}
-
-.seeker input:active {
-    border: 2px solid white;
-}
-
-.filter {
-    background-color: rgba(255, 255, 255, 0.692);
-    display: flex;
-    flex-flow: row;
-    justify-content: space-evenly;
-    height: 50%;
-    padding: 13px;
-    margin: 30px 180px;
-
-}
-.seeker{
-    padding: 10px;
-    display: flex;
-    margin: 20px  0px;
-    flex-flow: row wrap;
-    justify-content: space-around;
-}
-.seeker h1{
-    width: 20%;    
-    color: #fcc805;
-    text-shadow: 2px 3px 0px #1e5d9f;
-}
-.seeker div{
-    display: flex;
-    flex-flow: row;
-}
-.seeker input{
-    width: 20%;
-    font-size: 1.5em;
-    background-color: white;
-    border: none;
-    box-shadow: 2px 1px 4px grey; 
-    color: #e6504d;
-    outline: none;
-    text-align: center;
-    padding-left:30px ;
-    padding-right: 30px;
-    border-radius: 5px;
-}
-.seeker input:active{
-    border: 2px solid white;
-}
-*/
-/*filter design*/
-.filter{
-    display: flex;
-    background-color: hsla(278, 30%, 50%, 0.71);
-    padding: 25px;
-    border-radius: 10px;
-    flex-flow: row;
-    justify-content: space-between;
-    margin:15px 72px;
-}
-.filter__01{
-    display: flex;
-    flex-flow: row wrap;
-}
-.filter__01-1{
-    height: 100%;
-}
-.filter__01 select{
-    width: 150px;
-    margin: 0px 10px;
-    background-color:#fffafa;
-    border:5px solid #1e3780 ;
-    border-radius: 13px;
-    display: flex;
-    flex-direction: row;
-    position: relative;
-    font-size: 18px;
-    height: 50px;
-    font-weight: bolder;
-}
-.filter__01 select option{
-    min-height: 40px;
-    display: flex;
-    align-items: center;
-    border:1px solid #a6a5a57a ;
-    border-top: #000 solid 1px;
-    position: absolute;
-    top: 0;
-    width: 100%;
-    text-align: center;
-    z-index: 1;
-    box-sizing: border-box;
-}
-.filter__01 select:focus option{
-    position: relative;
-    position: all;
-}
-.filter-label-1{
-    background-color:#e3e3f6;
-    font-size: 20px; 
-    font-weight: bold;
-    padding:0px ;
-    width: 150px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 50px;
-    border-radius: 7px ;
-}
-.filter__02{
-    text-align: center;
-    width: 150px;
-    margin: 0px 10px;
-    background-color:#fff;
-    border:5px solid #1e3780 ;
-    border-radius: 13px;
-    display: flex;
-    flex-direction: row;
-    position: relative;
-    height: 50px;
-    font-size: 18px;
-font-weight: bold;
-}
-.filter__01 select option{
-    min-height: 40px;
-    display: flex;
-    align-items: center;
-    border:1px solid #8a59a6 ;
-    border-top: none;
-    position: absolute;
-    top: 0;
-    width: 100%;
-    pointer-events: none;
-    order:2;
-    z-index: 1;
-    transition: background 0.5s ease-in-out;
-    box-sizing: border-box;
-    overflow: hidden;
-    white-space: nowrap;
-}
 
 /*stats*/
 .stats-contain {
@@ -344,7 +244,6 @@ font-weight: bold;
 }
 .main-table {
     background-color:#fff ;/*#f8dbd556*/
-    padding: 10px;
     width: 100%;
     height: 100%;
 }
@@ -374,7 +273,7 @@ font-weight: bold;
     width:100%;
     height:100%;
 }   
-@media screen and (min-width: 320px) and (max-width: 480px) {
+@media screen and (min-width: 200px) and (max-width: 480px) {
     table{
         display: block;
         overflow-x: auto;
@@ -395,27 +294,45 @@ font-weight: bold;
         height:70px;
     }
 }
+@media screen and (min-width: 481px) and (max-width: 889px) {
+    table{
+        display: block;
+        overflow-x: auto;
+    }
+    .stats-contain {
+        margin: 15px 7%;
+    }
+
+    .main-table thead {
+        font-size: 22px;
+    }
+    .element-datatr {
+        font-size: 20px;
+       
+    }
+    .element-datatr td img{
+        width:70px;
+        height:70px;
+    }}
 /*footer*/
 .cotainer-footer {
     position: relative;
     background-color: #1e3780;
-    width: 100%;
-    max-width: 100vw;
-    min-height: calc(100vh - 430px);
     display: flex;
     flex-flow: wrap row;
+    height: 40%;
     justify-content: space-evenly;
     align-items: center;
     border-color: #8a59a6;
     border-style: solid;
-    border-width: 5px 0px 0px;
-}
+     min-height: calc(30vh - 30px); 
 
+}
 .logo-footer {
+    padding: 0px;
     flex: 28%;
     display: flex;
     justify-content: center;
-    height: 100%;
 }
 
 .box-img-poke {
@@ -478,10 +395,127 @@ font-weight: bold;
 }
 
 
+@media screen and  (max-width:800px){/*laptap nav*/
+    
+    
+    .container-title{ 
+        height: 75px;
+        width: 100%;
+    }
+    
+    .container-title nav {
+        width: 80%;
+        height: 100%;
+    }
+    .container-title nav li{
+        padding:  23px 15px;
+        font-size: 1.5em;
+    }
+    .container-logo {
+        height: 100%;
+        width: 20%;
+    } 
+}
+@media screen and  (max-width:840px){/*laptap filt*/
 
-/*colores*/
-.colores {
-    color: #202f40;
-    color: #ffff00;
-    color:#1d1533
+    .filterr{
+        display: flex;
+        background-color: hsla(278, 30%, 50%, 0.71);
+        padding: 20px;
+        border-radius: 10px;
+        width: 100%;
+        height: 100%;
+        flex-flow: row ;
+        justify-content: space-between;
+    }
+    
+    .filter__01{
+        display: flex;
+        flex-flow: row ;
+        justify-content: space-between;
+        align-items: center;
+    }
+    .filter__01 select{
+        margin: 0px 10px 0px 0px;
+        width: 8.5em;
+        height: 3em;
+        font-size: 0.8em;
+    }
+    .filter__01 .filter-label-1{
+        width: 7em;
+        margin: 0px 10px ;
+        height: 35px;
+        font-size: 12px;
+    }
+    .filter__02{
+        background-color: #fff;
+        width: 5em;
+        margin: 0px 0px;
+        height: 35px;
+        font-size: 15px;
+    }
+}
+@media screen and  (max-width: 540px){
+    .container-filter-box{
+        margin: 15px 4%;
+    }
+    
+    .filterr{
+        background-color: hsla(278, 30%, 50%, 0.71);
+    }
+    
+    .filter__01{    
+    }
+    .filter__01 select{
+        text-align: center;
+        margin: 0px 5px;
+        font-size: 10px;
+        width: 6.5em;
+        height: 3em;
+    }
+    
+    .filter__01 .filter-label-1{
+        text-align: center;
+        width: 65px;
+        margin: 0px 0px;
+        height: 30px;
+        font-size: 10px;
+    }
+    .filter__02{
+        text-align: center;
+        margin: 0px 0px;
+        font-size: 10px;
+        width: 6.5em;
+        height: 3em;
+    }
+
+    .box-pokedex{
+        margin: 15px 4%;
+    }
+    .card{
+        height:10em;
+        width: 8em;
+        padding: 0px;
+
+    }
+     .card .p-1{
+        display: inline-block;
+        width: 100%;
+    } 
+    .card .p-2{
+        display: inline-block;
+        width: 100%;
+    }
+    .card .p-3{
+        display: inline-block;
+        width: 100%;
+    }
+    .cotainer-footer {
+        display: flex;
+        flex-flow: wrap column;
+    }
+    .pokemon-img img{
+        width: 80px;
+        height: 60px;
+    } 
 }
