--- a/src/style.css
+++ b/src/style.css
@@ -6,105 +6,92 @@
 
 body {
     width: 100%;
+    height: 100%;
     text-align: center;
-    background-color:black;
-    background-image: linear-gradient(rgba(5, 7, 12, .8), rgba(0, 0, 0, .5)),
-    url(./img/back.png );
+    /* background-color: rgb(0, 0, 0);*/
+    background-image: url(./img/fondo6.jpg);
+    /*  background-image: linear-gradient(rgba(5, 7, 12, .8), rgba(0, 0, 0, .5)),
+        url(./img/back.png );*/
+    position: relative;
 }
 
 header {
-   
-    height: 300px;
+
+    height: 12em;
     width: 100%;
-    color: white;
-    font-size:6em;
-    font-family: 'roboto';
-    position: relative;
-     
+    background-color: rgba(32, 30, 36);
+
+
+}
+
+nav {
+    background-color: rgba(32, 30, 36);
+    height: 40%;
+    padding: 1.5%;
 }
  
- 
- span{
-    font-size:.7em;
+.titleHeader {
+    width: 700px;
+    height: 180px;
     margin: auto;
-    bottom: 35px;
-    position: absolute;
-    color: rgb(241, 241, 241);
-     
-}
-.studios{
-    left: 150px;
-
-
-  /*margin-left: 30px;
-   margin-right: 250px;*/
- 
-    
-}
-.ghibli{
-    right: 150px;
-    /*margin-right: 30px;
-    margin-left: 250px;*/
-
-}  
-
-
-
- 
-
-.img1{
-    position: relative;
-     
-    width: 2em;
-    height: 2.7em;
-    display: inline-block;
-
-}
-.img1 img{
-    width: 2em;
-    height: 2.7em;
-}
- 
   
- 
-.img1::before,.img1::after{
 
-    content: '';
-    position: absolute;
-    width: 900px;
-    height: 1px;
+
+}
+
+.img0 {
+    width: 22em;
+    height: 7em;
+    border-left: 1px solid black;
+    border-right: 1px solid black;
+    margin-top: 2%;
+    justify-content: space-between;
+    filter: invert(0.8);
+}
+
+.imga {
+    max-width: 100%;
     margin: auto;
-    background-color: rgb(172, 172, 172);
-    top: 1.5em;
-    box-shadow: 0px 8px 40px 2px rgb(105, 105, 105);
 
-    
 }
-.img1::before{
-    left: 140px;
+
+.imga img {
+    max-width: 3em;
+    max-height: 3em;
+    margin: auto;
 }
-.img1::after{
-    right:140px;
+
+.imgd {
+    width: 150px;
+    height: 180px;
+
+
+}
+
+.imgd-1 {
+    max-width: 150px;
+    max-height: 180px;
+    transform: scaleX(-1);
+
 }
 
 main {
     width: 100%;
     height: 100%;
-     
-    
     font-family: 'Roboto', sans-serif;
 
 }
 
 #insertPoster {
     display: flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-    align-content: flex-start;
-    width: 90%;
+    flex-flow: row wrap;
+    justify-content: center;
+    align-items: flex-start;
+    width: 75%;
     height: 100%;
     margin: auto;
-    
+    padding: 20px;
+
 }
 
 
@@ -112,91 +99,151 @@ main {
 
     width: 12em;
     height: 22em;
-    margin: 50px;
-    position: relative;
+    margin: 20px 10px 10px 20px;
+    
     border-radius: 4%;
     display: flex;
-    box-shadow: 0px 0px 15px 8px rgb(82, 76, 76);
+    box-shadow: 0px 0px 10px 2px rgb(116, 111, 111);
+    flex-flow: column wrap;
+    background-color: rgba(32, 30, 36);
     
-    justify-content: center;
 
 
 }
 
+.imgPoster p {
+    color: rgb(189, 186, 186);
+    font-size: 1em;
+    width: 90%;
+    margin: auto;
+
+}
 
 img {
     width: 12em;
     height: 19em;
-    border-radius: 4% 4% 0% 0%;
-
-
 }
 
 .imgPoster:hover {
-
     bottom: 20px;
-
-    box-shadow: 0px 0px 25px 15px rgb(119, 112, 133);
+    box-shadow: 0px 0px 30px 10px rgba(44, 44, 44, 0.658);
     transition: .5s;
 
 }
-
-p {
-    position: absolute;
-    bottom: .2em;
-    text-align: center;
-    color: rgb(235, 235, 235);
-    font-size: 1.2em;
-    width: 90%;
-    
-    
-}
-
-.select {
-    background-color: rgb(231, 231, 217);
-    width: 200px; 
+ 
+ 
+.btnMenu {
+    background-color: rgb(120, 140, 146);
+    width: 200px;
     height: 35px;
     text-align: center;
     padding: 5px;
-    border-radius: 20px;
+    border-radius: 15px;
     margin: 10px;
-    border: 2px solid white;
-    box-shadow: 0px 0px 10px 1px rgb(167, 165, 141);
+    border: 0px solid;
+    box-shadow: 0px 0px 5px 1px rgb(53, 51, 52);
     font-family: 'roboto';
+    font-style: initial;
     opacity: 0.8;
-    color: rgb(43, 43, 43);
-    
-
-
+    color: rgb(255, 255, 255);
 }
 
 option {
-    background-color: #fffffffb;
-    border: 0px solid ;
-    font-size: 14px;
-    padding: 20px;
-    margin:auto;
-    opacity: 0.5;
-    border-radius:8px solid ;
+    background-color: #bacdcf;
+    font-size: 12px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    color: rgb(74, 77, 76);
-    padding: 10px;
+    color: rgb(71, 69, 69);
+}
+
+.btnMenu:hover {
+    background-color: rgb(218, 183, 107);
+    transition: .5s;
+}
+
+footer {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 15px;
+    width: 100%;
+    height: 90px;
+    background-color: rgba(32, 30, 36);
+    position: sticky;
+    bottom: 0px;
+
+}
+
+
+#imgFooter {
+    height: 40px;
+    width: 40px;
+
+}
+
+.created {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    letter-spacing: 5px;
+    color: rgb(146, 140, 140);
+
+}
+
+
+.Names {
+    list-style: none;
+    letter-spacing: 8px;
+    color: rgb(146, 140, 140);
+}
+
+.textEstadistics {
+    display: flex;
+    flex-flow: column wrap;
+    width: 80%;
+    height: 100%;
+    margin: auto;
+    margin-top: 50px;
+
+
+
+} 
+
+#titleDiv{
+    color: rgb(61, 67, 70);
+    font-size: 2.8em ;
+    border-left: 3px solid black;
+    border-right: 3px solid black;
+    
+     
     
 }
 
-
-#btnTop{
-    background-color: rgb(231, 231, 217);
-    width: 200px; 
-    height: 35px;
-    text-align: center;
-    padding: 5px;
-    border-radius: 20px;
-    margin: 10px;
-    border: 2px solid white;
-    box-shadow: 0px 0px 10px 1px rgb(167, 165, 141);
-    font-family: 'roboto';
-    opacity: 0.8;
-    color: rgb(43, 43, 43);
-}
+.cajaCuriosa {
+   
+    color: rgb(43, 38, 38);
+    width: 500px;
+    height:300px;
+    margin: auto;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    font-size: 1.3em;
  
+    border-radius: 20px;
+    text-align: justify;
+    padding: 30px;
+    display: flex;
+    box-shadow: 0px 0px 5px 1px rgb(128, 127, 127);
+   
+}
+.cajaCuriosa .child{
+    width: 120px;
+    height: 200px;
+    margin: 10px;
+   
+}
+/* @media (max-width: 800px) {
+    main{
+        background-color: rgb(29, 29, 28);
+    }
+
+    
+
+} */
