--- a/src/style.css
+++ b/src/style.css
@@ -2,96 +2,89 @@
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
+
 }
 
 body {
     width: 100%;
     text-align: center;
-    background-color:black;
+    background-color: black;
     background-image: linear-gradient(rgba(5, 7, 12, .8), rgba(0, 0, 0, .5)),
-    url(./img/back.png );
+        url(./img/back.png );
 }
 
 header {
-   
+
     height: 300px;
     width: 100%;
     color: white;
-    font-size:6em;
+    font-size: 6em;
     font-family: 'roboto';
     position: relative;
-     
+
 }
- 
- 
- span{
-    font-size:.7em;
+
+
+span {
+    font-size: .7em;
     margin: auto;
     bottom: 35px;
     position: absolute;
-    color: rgb(241, 241, 241);
-     
+    color: rgb(155, 27, 27);
+
 }
-.studios{
+
+.studios {
     left: 150px;
 
 
-  /*margin-left: 30px;
+    /*margin-left: 30px;
    margin-right: 250px;*/
- 
-    
+
+
 }
-.ghibli{
+
+.ghibli {
     right: 150px;
     /*margin-right: 30px;
     margin-left: 250px;*/
 
-}  
+}
 
 
 
- 
 
-.img1{
+
+.img1 {
     position: relative;
-     
+
     width: 2em;
     height: 2.7em;
     display: inline-block;
 
 }
-.img1 img{
+
+.img1 img {
     width: 2em;
     height: 2.7em;
 }
- 
-  
- 
-.img1::before,.img1::after{
 
-    content: '';
-    position: absolute;
-    width: 900px;
-    height: 1px;
-    margin: auto;
-    background-color: rgb(172, 172, 172);
-    top: 1.5em;
-    box-shadow: 0px 8px 40px 2px rgb(105, 105, 105);
 
-    
-}
-.img1::before{
+
+
+.img1::before {
     left: 140px;
 }
-.img1::after{
-    right:140px;
+
+.img1::after {
+    right: 140px;
 }
 
 main {
     width: 100%;
     height: 100%;
-     
-    
+
+
     font-family: 'Roboto', sans-serif;
 
 }
@@ -104,7 +97,7 @@ main {
     width: 90%;
     height: 100%;
     margin: auto;
-    
+
 }
 
 
@@ -117,7 +110,7 @@ main {
     border-radius: 4%;
     display: flex;
     box-shadow: 0px 0px 15px 8px rgb(82, 76, 76);
-    
+
     justify-content: center;
 
 
@@ -148,13 +141,13 @@ p {
     color: rgb(235, 235, 235);
     font-size: 1.2em;
     width: 90%;
-    
-    
+
+
 }
 
 .select {
     background-color: rgb(231, 231, 217);
-    width: 200px; 
+    width: 200px;
     height: 35px;
     text-align: center;
     padding: 5px;
@@ -165,29 +158,29 @@ p {
     font-family: 'roboto';
     opacity: 0.8;
     color: rgb(43, 43, 43);
-    
+
 
 
 }
 
 option {
     background-color: #fffffffb;
-    border: 0px solid ;
+    border: 0px solid;
     font-size: 14px;
     padding: 20px;
-    margin:auto;
+    margin: auto;
     opacity: 0.5;
-    border-radius:8px solid ;
+    border-radius: 8px solid;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     color: rgb(74, 77, 76);
     padding: 10px;
-    
+
 }
 
 
-#btnTop{
+#btnTop {
     background-color: rgb(231, 231, 217);
-    width: 200px; 
+    width: 200px;
     height: 35px;
     text-align: center;
     padding: 5px;
@@ -199,4 +192,78 @@ option {
     opacity: 0.8;
     color: rgb(43, 43, 43);
 }
+
+.textEstadistics {
+    display: flex;
+    flex-flow: column wrap;
+    background-color: rgb(124, 124, 128);
+    color: rgb(7, 7, 7);
+    width: 80%;
+    height: 100%;
+    text-align: center;
+    margin: auto;
+    margin-top: 50px;
+
+
+
+} 
+
+h1{
+    color: rgb(238, 241, 243);
+    font-size: 1.5em ;
+}
+
+.cajaCuriosa {
+
+    background-color: rgb(222, 222, 191);
+    color: rgb(54, 54, 57);
+    width: 80%;
+    height: 100px;
+    margin: auto;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    font-size: .7em;
+    padding: 1%;
+    text-align: center;
+}
+
  
+
+footer {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 15px;
+    box-sizing: border-box;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background-color: rgba(1, 8, 14, 0.299);
+    position: fixed;
+    bottom: 0;
+
+}
+
+
+#imgFooter {
+    height: 60px;
+    width: 60px;
+    padding: 2px;
+}
+
+.created {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    padding: 8px;
+    padding: 2px;
+    letter-spacing: 2px;
+    color: rgb(255, 255, 255);
+}
+
+
+.Names {
+    list-style: none;
+    letter-spacing: 2px;
+    color: rgb(255, 255, 255);
+}
