--- a/src/style.css
+++ b/src/style.css
@@ -8,7 +8,6 @@ body {
     width: 100%;
     height: 100%;
     text-align: center;
-    /* background-color: rgb(0, 0, 0);*/
     background-image: url(./img/fondo6.jpg);
     /*  background-image: linear-gradient(rgba(5, 7, 12, .8), rgba(0, 0, 0, .5)),
         url(./img/back.png );*/
@@ -16,50 +15,51 @@ body {
 }
 
 header {
-
-    height: 12em;
+    height: 200px;
     width: 100%;
     background-color: rgba(32, 30, 36);
-
 
 }
 
 nav {
     background-color: rgba(32, 30, 36);
     height: 40%;
-    padding: 1.5%;
+    padding: 1%;
 }
- 
+
 .titleHeader {
-    width: 700px;
+    width: 100%;
     height: 180px;
     margin: auto;
-  
-
 
 }
 
+.titleOption{
+    
+    width: 200px;
+    height: 38px;
+    display: flex;
+    flex-flow: column wrap;
+    display: inline-block;
+   
+}
+label{
+    color: rgb(192, 186, 186);
+    font-size: 8px;
+    margin: auto;
+    margin-top: 20px;
+    font-family: 'Roboto';
+     
+}
 .img0 {
-    width: 22em;
-    height: 7em;
+    width: 400px;
+    height: 120px;
     border-left: 1px solid black;
     border-right: 1px solid black;
-    margin-top: 2%;
-    justify-content: space-between;
     filter: invert(0.8);
 }
 
-.imga {
-    max-width: 100%;
-    margin: auto;
 
-}
-
-.imga img {
-    max-width: 3em;
-    max-height: 3em;
-    margin: auto;
-}
 
 .imgd {
     width: 150px;
@@ -90,24 +90,24 @@ main {
     width: 75%;
     height: 100%;
     margin: auto;
-    padding: 20px;
-
+    padding: 10x;
+    margin-bottom: 100px;
+    margin-top: 25px;
 }
 
 
 .imgPoster {
 
-    width: 12em;
-    height: 22em;
-    margin: 20px 10px 10px 20px;
-    
+    width: 10em;
+    height: 19em;
+    margin: 15px;
+
     border-radius: 4%;
     display: flex;
     box-shadow: 0px 0px 10px 2px rgb(116, 111, 111);
     flex-flow: column wrap;
     background-color: rgba(32, 30, 36);
-    
-
+    cursor: pointer;
 
 }
 
@@ -120,54 +120,83 @@ main {
 }
 
 img {
-    width: 12em;
-    height: 19em;
+    width: 10em;
+    height: 16em;
 }
 
 .imgPoster:hover {
-    bottom: 20px;
+    position: relative;
     box-shadow: 0px 0px 30px 10px rgba(44, 44, 44, 0.658);
     transition: .5s;
+    bottom: 15px;
 
 }
- 
- 
+
+
 .btnMenu {
-    background-color: rgb(120, 140, 146);
+    background-color: rgb(197, 181, 151);
     width: 200px;
     height: 35px;
     text-align: center;
     padding: 5px;
     border-radius: 15px;
-    margin: 10px;
+    margin: 2px;
     border: 0px solid;
     box-shadow: 0px 0px 5px 1px rgb(53, 51, 52);
     font-family: 'roboto';
     font-style: initial;
     opacity: 0.8;
-    color: rgb(255, 255, 255);
+    color: rgb(66, 64, 64);
+    cursor: pointer;
+    font-weight: 600;
+}
+.titleOption{
+    
+    width: 230px;
+    height: 60px;
+    display: flex;
+    flex-flow: column wrap;
+
+    display: inline-block;
+   
+}
+label{
+    color: rgb(192, 186, 186);
+    font-size: 15px;
+    margin: auto;
+    margin-top: 20px;
+    font-family: 'Roboto';
+     
+}
+
+.btn {
+    background-color: #ffffff;
+
 }
 
 option {
-    background-color: #bacdcf;
-    font-size: 12px;
+    background-color: #2e3131;
+    font-size: 18px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    color: rgb(71, 69, 69);
+    color: rgb(196, 192, 192);
+     
 }
 
 .btnMenu:hover {
-    background-color: rgb(218, 183, 107);
+    background-color: rgb(73, 67, 94);
     transition: .5s;
+    color:white;
 }
 
 footer {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 15px;
     width: 100%;
-    height: 90px;
+    height: 100px;
     background-color: rgba(32, 30, 36);
-    position: sticky;
+    position: fixed;
     bottom: 0px;
+
 
 }
 
@@ -178,20 +207,13 @@ footer {
 
 }
 
-.created {
+.nameFooter {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
     letter-spacing: 5px;
     color: rgb(146, 140, 140);
 
-}
-
-
-.Names {
-    list-style: none;
-    letter-spacing: 8px;
-    color: rgb(146, 140, 140);
 }
 
 .textEstadistics {
@@ -204,46 +226,361 @@ footer {
 
 
 
-} 
+}
 
-#titleDiv{
+#titleDiv {
     color: rgb(61, 67, 70);
-    font-size: 2.8em ;
+    font-size: 2.8em;
     border-left: 3px solid black;
     border-right: 3px solid black;
-    
-     
-    
+
+
+
 }
 
 .cajaCuriosa {
-   
+
     color: rgb(43, 38, 38);
     width: 500px;
-    height:300px;
+    height: 300px;
     margin: auto;
     margin-top: 10px;
     margin-bottom: 10px;
     font-size: 1.3em;
- 
     border-radius: 20px;
     text-align: justify;
     padding: 30px;
     display: flex;
     box-shadow: 0px 0px 5px 1px rgb(128, 127, 127);
-   
+
 }
-.cajaCuriosa .child{
+
+.cajaCuriosa .child {
     width: 120px;
     height: 200px;
     margin: 10px;
-   
+
 }
-/* @media (max-width: 800px) {
-    main{
-        background-color: rgb(29, 29, 28);
+
+@media (max-width:750px) {
+    .totoro {
+        width: 90px;
+        height: 100px;
+
+    }
+
+    nav {
+        background-color: rgba(32, 30, 36);
+        height: 20%;
+        padding: 1%;
+    }
+
+
+    .img0 {
+        width: 240px;
+        height: 65px;
+        border-left: 1px solid black;
+        border-right: 1px solid black;
+        margin-top: 2%;
+        justify-content: space-between;
+        filter: invert(0.8);
+    }
+
+    header {
+        height: 100px;
+        width: 100%;
+        background-color: rgba(32, 30, 36);
+
+    }
+
+    .textEstadistics {
+        display: flex;
+        flex-flow: column wrap;
+        width: 90%;
+        height: 100%;
+        margin-top: 15px;
+        font-size: 10px;
+
+
+
+    }
+
+    .cajaCuriosa {
+        width: 280px;
+        height: 250px;
+        margin-top: 10px;
+        margin-bottom: 10px;
+        font-size: 15px;
+
+    }
+
+    .cajaCuriosa .child {
+        width: 70px;
+        height: 100px;
+        margin: 8px;
+
+
+    }
+
+    .btnMenu {
+
+        width: 110px;
+        height: 25px;
+        padding: 1px;
+        border-radius: 15px;
+        margin: 1px;
+        cursor: pointer;
+        font-size: 9px;
+        color: rgb(0, 0, 0);
+        font-weight: 500;
+    }
+    option {
+        background-color: #2e3131;
+        font-size: 8px;
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        color: rgb(196, 192, 192);
+       
+         
+    }
+    .titleOption{
+    
+        width: 110px;
+        height: 38px;
+        display: flex;
+        flex-flow: column wrap;
+        display: inline-block;
+       
+    }
+    label{
+        color: rgb(192, 186, 186);
+        font-size: 8px;
+        margin: auto;
+        margin-top: 20px;
+        font-family: 'Roboto';
+         
+    }
+    footer {
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        font-size: 10px;
+        width: 100%;
+        height: 40px;
+        background-color: rgba(32, 30, 36);
+        position: fixed;
+        bottom: 0px;
+    }
+
+    #imgFooter {
+        display: none;
+
+    }
+    .nameFooter {
+        display: flex;
+        justify-content: center;
+        flex-wrap: wrap;
+        letter-spacing: 2px;
+        color: rgb(146, 140, 140);
+        margin: auto;
+        margin-top: 4px;
+
+
+    }
+    
+
+}
+
+@media (max-width:500px) {
+
+    header {
+        height: 90px;
+        width: 100%;
+        background-color: rgba(32, 30, 36);
+
+    }
+
+    .titleHeader {
+        height: 80px;
+        margin: auto;
+
+    }
+
+    .totoro {
+        width: 50px;
+        height: 70px;
+
+    }
+    .img0 {
+        width: 150px;
+        height: 40px;
+        border-left: 1px solid black;
+        border-right: 1px solid black;
+        margin-top: 2%;
+        justify-content: space-between;
+        filter: invert(0.8);
     }
 
     
+    .btnMenu {
+        background-color: rgb(197, 181, 151);
+        width: 100px;
+        height: 20px;
+        text-align: center;
+        padding: 1px;
+        border-radius: 15px;
+        margin: 3px;
+        border: 0px solid;
+        box-shadow: 0px 0px 5px 1px rgb(53, 51, 52);
+        font-family: 'roboto';
+        opacity: 0.8;
+        color: rgb(66, 64, 64);
+        cursor: pointer;
+        font-size: 7px;
+         
+    }
+    option {
+        background-color: #2e3131;
+        font-size: 8px;
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        color: rgb(196, 192, 192);
+       
+         
+    }
+    .titleOption{
+    
+        width: 110px;
+        height: 38px;
+        display: flex;
+        flex-flow: column wrap;
+        display: inline-block;
+       
+    }
+    label{
+        color: rgb(192, 186, 186);
+        font-size: 8px;
+        margin: auto;
+        margin-top: 20px;
+        font-family: 'Roboto';
+         
+    }
+    
+    .btn {
+        background-color: #fdfdfd;
+    
+    }
+    
+    footer {
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        font-size: 10px;
+        width: 100%;
+        height: 40px;
+        background-color: rgba(32, 30, 36);
+        position: fixed;
+        bottom: 0px;
 
-} */
+    }
+
+    #imgFooter {
+        display: none;
+
+    }
+
+    .nameFooter {
+        display: flex;
+        justify-content: center;
+        flex-wrap: wrap;
+        letter-spacing: 2px;
+        color: rgb(146, 140, 140);
+        margin: auto;
+        margin-top: 4px;
+
+
+    }
+
+    #insertPoster {
+        display: flex;
+        flex-flow: row wrap;
+        justify-content: center;
+        align-items: flex-start;
+        width: 90%;
+        margin: auto;
+        margin-bottom: 100px;
+        margin-top: 20px;
+    }
+
+    .imgPoster {
+        width: 8em;
+        height: 14em;
+        margin: 10px;
+        border-radius: 4%;
+        display: flex;
+        box-shadow: 0px 0px 10px 2px rgb(116, 111, 111);
+        flex-flow: column wrap;
+        background-color: rgba(32, 30, 36);
+        cursor: pointer;
+
+    }
+
+    .imgPoster p {
+        color: rgb(189, 186, 186);
+        font-size: .8em;
+        width: 100%;
+        margin: auto;
+
+    }
+
+    img {
+        width: 8em;
+        height: 12em;
+    }
+
+    .textEstadistics {
+        display: flex;
+        flex-flow: column wrap;
+        width: 90%;
+        height: 100%;
+        margin-top: 15px;
+
+    }
+
+    #titleDiv {
+        color: rgb(61, 67, 70);
+        font-size: 2em;
+        border-left: 3px solid black;
+        border-right: 3px solid black;
+
+
+
+    }
+
+    .cajaCuriosa {
+
+        color: rgb(43, 38, 38);
+        width: 280px;
+        height: 250px;
+        margin: auto;
+        margin-top: 10px;
+        margin-bottom: 10px;
+        font-size: 15px;
+        border-radius: 20px;
+        text-align: justify;
+        padding: 30px;
+        display: flex;
+        box-shadow: 0px 0px 5px 1px rgb(128, 127, 127);
+
+
+    }
+
+    .cajaCuriosa .child {
+        width: 70px;
+        height: 100px;
+        margin: 8px;
+        display: inline-block;
+        margin-top: auto;
+        margin-bottom: auto;
+
+
+
+    }
+
+
+
+}
