--- a/src/style.css
+++ b/src/style.css
@@ -7,13 +7,14 @@
 
 body {
     width: 100%;
-    height: 100%;
+    height: 20%;
     text-align: center;
     /* background-color: rgb(0, 0, 0);*/
     background-image: url(./img/fondo6.jpg);
     /*  background-image: linear-gradient(rgba(5, 7, 12, .8), rgba(0, 0, 0, .5)),
         url(./img/back.png );*/
     position: relative;
+
 }
 
 header {
@@ -161,15 +162,17 @@ option {
     transition: .5s;
 }
 
+
+
 footer {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 15px;
     width: 100%;
-    height: 90px;
+    height: 100px;
     background-color: rgba(32, 30, 36);
-    position: sticky;
+    position: fixed;
     bottom: 0px;
-
+    /*baja porque tiene un margin top, esto no deberia de nesecitar un margin top*/
 }
 
 
