--- a/src/style.css
+++ b/src/style.css
@@ -232,8 +232,8 @@ footer {
 
 
 .regreso{
-  background-color: #ebcf0c;
-  color: black;
+  background-color: #514a8b;
+  color: white;
 }
 
 /*Media Query Celular*/
