--- a/src/style.css
+++ b/src/style.css
@@ -17,7 +17,7 @@ header {
   margin: 3em;
   display: flex;
   justify-content: center;
-  gap: 65px;
+  gap: 3%;
 }
 
 #search-bar {
@@ -40,12 +40,23 @@ header {
 }
 
 #search-btn {
+  width: 20%;
+}
+
+#buttons {
+  height: auto;
+  width: 35%;
+  display: flex;
+  gap: 30px;
+}
+
+button {
   background-color: rgb(72, 72, 72);
   height: auto;
-  width: 20%;
+  width: 100%;
   color: white;
   border-radius: 20px;
-  font-size: 2em;
+  font-size: 2.7em;
 }
 
 select {
